--- a/src/app/components/footer/footer-compenent.html
+++ b/src/app/components/footer/footer-compenent.html
@@ -1,11 +1,11 @@
 <footer class="app-footer">
-  <button mat-button (click)="navigate('chartSimple')">
-    <mat-icon>shopping_cart</mat-icon>
+  <button mat-button (click)="navigate('chart')">
+    <mat-icon>bar_chart</mat-icon>
     <span>Grafiek</span>
   </button>
 
   <button mat-button (click)="navigate('orders')">
-    <mat-icon>shopping_cart</mat-icon>
+    <mat-icon>account_balance_wallet</mat-icon>
     <span>Orders</span>
   </button>
 
@@ -13,11 +13,6 @@
     <mat-icon>visibility</mat-icon>
     <span>Watchlist</span>
   </button>
-  <!--
-    <button mat-button (click)="showNotification()">
-        <mat-icon>notifications</mat-icon>
-        <span>Notify</span>
-    </button> -->
 
   <button mat-button (click)="navigate('dashboard')">
     <mat-icon>settings</mat-icon>
